--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 https://github.com/JazkiaLineadro/Info-viral/blob/main/google939cae9b0316466c.html
+<meta name="google-site-verification" content="38FHinU9okbVe2WDHgFs6xRqktLk896RASJKuDCM1D4" />
